@@ -25,6 +25,10 @@
     <checkstyle.version>8.42</checkstyle.version>
     <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
     <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+    <selenium-java.version>3.141.59</selenium-java.version>
+    <webdrivermanager.version>4.4.3</webdrivermanager.version>
+    <allure.version>2.14.0</allure.version>
+    <aspectj.version>1.9.5</aspectj.version>
     <jdi-light-html.version>1.3.2</jdi-light-html.version>
     <selenium-java.version>3.141.59</selenium-java.version>
     <webdrivermanager.version>4.4.3</webdrivermanager.version>
@@ -91,10 +95,21 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
+          <argLine>
+            --illegal-access=permit
+            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+          </argLine>
           <suiteXmlFiles>
             <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
@@ -123,11 +138,13 @@
     </profile>
 
     <profile>
+      <id>allure-jenkins-profile</id>
       <id>jdi-tests-profile</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
+        <testng.suite.file>${testng.configs.path}/allure-jenkins.xml</testng.suite.file>
         <testng.suite.file>${testng.configs.path}/jdi-metals-and-colors-tests.xml</testng.suite.file>
       </properties>
     </profile>
@@ -161,6 +178,7 @@
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>${testng.version}</version>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
@@ -175,6 +193,12 @@
       <version>1.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>${allure.version}</version>
+      </dependency>
+    
     <dependency>
       <groupId>com.epam.jdi</groupId>
       <artifactId>jdi-light-html</artifactId>
@@ -197,6 +221,26 @@
 
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>${selenium-java.version}</version>
+    </dependency>
+
+  </dependencies>
+
+  <reporting>
+    <excludeDefaults>true</excludeDefaults>
+    <plugins>
+      <plugin>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-maven</artifactId>
+        <version>2.10.0</version>
+        <configuration>
+          <reportVersion>${allure.version}</reportVersion>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
+
       <artifactId>selenium-api</artifactId>
       <version>${selenium.version}</version>
       <scope>compile</scope>
